# xlsx-rs

./: Cargo.toml
old/: Cargo.toml
old/src/: lib.rs  result.rs  xlsx.rs
old/src/xml/: content_types.rs  doc_props.rs  mod.rs  sheet.rs
old/src/zip/: compression.rs  cp437.rs  crc32.rs  spec.rs  write.rs
src/: file.rs  lib.rs  refer.rs  rels.rs  result.rs  shared_strings.rs  styles.rs  theme.rs  workbook.rs  xlsx.rs  xlsx_style.rs
src/xlsx/: address_converter.rs  app_properties.rs  base.rs  content_types.rs  core_properties.rs  map.rs  mod.rs  relationships.rs  rels.rs  row.rs  shared_strings.rs  sheet.rs  style_sheet.rs  test.rs  theme.rs  trie.rs  workbook.rs  worksheet.rs  zip.rs
src/xlsx/btree/: map.rs  mod.rs  navigate.rs  node.rs  search.rs  set.rs
src/xml/: content_types.rs  doc_props.rs  mod.rs  rels.rs  shared_strings.rs  sheet.rs  styles.rs  theme.rs  workbook.rs
src/xml/yaserde/src/de/: mod.rs
src/xml/yaserde_derive/src/common/: field.rs
src/xml/yaserde_derive/src/de/: expand_enum.rs  expand_struct.rs
src/xmlsheet/: mod.rs  styles.rs  theme.rs
src/zip/: mod.rs  read.rs  types.rs
test_data/xlsx/: [Content_Types].xml
test_data/xlsx/xl/: sharedStrings.xml  styles.xml
test_data/xlsx/xl/_rels/: workbook.xml.rels
test_data/xlsx/xl/theme/: theme1.xml
test_data/xlsx/xl/worksheets/: sheet1.xml
tests/: styles.xml  table.xlsx
tests/xlsx/_rels/: .rels
tests/xlsx/docProps/: app.xml  core.xml
tests/xlsx/xl/: workbook.xml
