[package]
name = "xlsx"
version = "0.1.0"
description = "A xlsx file reading and writing library based Serde"
authors = ["John Wang <5672618@qq.com>"]

[dependencies]
zip = "0.5.5"
yaserde = { path = "src/xml/yaserde" }
yaserde_derive = { path = "src/xml/yaserde_derive" }
xml-rs = "0.8.0"
log = "0.4.1"