[package]
name = "xlsx"
version = "0.1.0"
description = "A xlsx file reading and writing library"
authors = ["John Wang <5672618@qq.com>"]

[dependencies]
zip = "0.5.5"
yaserde = { path = "../yaserde/yaserde" }
yaserde_derive = { path = "../yaserde/yaserde_derive" }
xml-rs = "0.8.0"
log = "0.4.1"
regex = "1.3.9"
lazy_static = "1.4.0"